--- a/app/css/teststyles.css
+++ b/app/css/teststyles.css
@@ -10,6 +10,7 @@
     font-family: 'helvetica';
     font-size: 13px; 
     font-weight: 550;
+    margin: 3px 0; 
 }
 
 /* Axis text for each track */
